tests/baselines/reference/unusedParametersinConstructor3.errors.txt
tests/cases/compiler/unusedParametersinConstructor3.ts(2,17): error TS6133: 'param1' is declared but never used.
tests/cases/compiler/unusedParametersinConstructor3.ts(2,49): error TS6133: 'param3' is declared but never used.


==== tests/cases/compiler/unusedParametersinConstructor3.ts (2 errors) ====
    class greeter {
        constructor(param1: string, param2: string, param3: string) {
                    ~~~~~~
!!! error TS6133: 'param1' is declared but never used.
                                                    ~~~~~~
!!! error TS6133: 'param3' is declared but never used.
            param2 = param2 + "dummy value";
        }
    }